[gd_scene load_steps=4 format=3 uid="uid://dc1arcrryh0rk"]

[ext_resource type="Theme" uid="uid://dgxt0xkl1qxl5" path="res://scenes/ui/UI.theme" id="1_fkoqd"]
[ext_resource type="Script" path="res://scenes/ui/main_menu/main_menu.gd" id="1_tchus"]
[ext_resource type="Script" path="res://addons/OBSControlLibrary/SlideoutContainer/slide_out_container.gd" id="2_fugu8"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_fkoqd")
script = ExtResource("1_tchus")

[node name="SlideoutMenu" type="Container" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
script = ExtResource("2_fugu8")
slide_edge = 3
slide_duration = 0.5
transition_type = 4
ease_type = 2

[node name="Margins" type="MarginContainer" parent="SlideoutMenu"]
layout_mode = 2
theme_override_constants/margin_left = 64

[node name="PanelContainer" type="PanelContainer" parent="SlideoutMenu/Margins"]
layout_mode = 2
theme_type_variation = &"TranslucentPanelContainer"

[node name="VButtons" type="VBoxContainer" parent="SlideoutMenu/Margins/PanelContainer"]
layout_mode = 2

[node name="BTN_StartGame" type="Button" parent="SlideoutMenu/Margins/PanelContainer/VButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Sign In"

[node name="BTN_Options" type="Button" parent="SlideoutMenu/Margins/PanelContainer/VButtons"]
layout_mode = 2
text = "Options"

[node name="BTN_Quit" type="Button" parent="SlideoutMenu/Margins/PanelContainer/VButtons"]
layout_mode = 2
text = "Check Out"

[connection signal="pressed" from="SlideoutMenu/Margins/PanelContainer/VButtons/BTN_StartGame" to="." method="_on_btn_start_game_pressed"]
[connection signal="pressed" from="SlideoutMenu/Margins/PanelContainer/VButtons/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="SlideoutMenu/Margins/PanelContainer/VButtons/BTN_Quit" to="." method="_on_btn_quit_pressed"]
